--- a/task/task2/task2.html
+++ b/task/task2/task2.html
@@ -1,92 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    *{
+        margin: 0px;
+        padding: opx;
+    }
+    img{
+        height: 35px;
+        width: 35px;
+    }
+    ul{
+        list-style: none;
+        display: flex;
+        padding: 0px;
+        margin: 0px;
+    }
+    li{
+        flex: 1;
+        text-align: center;
+    }
 
-<body style="text-align:-webkit-center; background-color:deepskyblue;">
-    <fieldset style=" width: 50%;">
-        <legend>Registration Details</legend>
-        <table>
-            <tr>
-                <td style="text-align:right">
-                    <label for="University">University :</label>
-                </td>
-                <td>
-                    <input type="text" name="university">
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <label for="Institute">Institute :</label>
-                </td>
-                <td>
-                    <input type="text" name="Institute">
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <label for="Branch">Branch :</label>
-                </td>
-                <td>
-                    <select name="Branch" value="select">
-                        <option value="select">---select---</option>
-                        <option value="select">I.T</option>
-                        <option value="select">C.E</option>
-                        <option value="select">M.E</option>
-                        <option value="select">E.E</option>
-                        <option value="select">civil</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <label for="Degree">Degree :</label>
-                </td>
-                <td>
-                    <select name="Degree" value="select">
-                        <option value="select">---select---</option>
-                        <option value="select">DIPLO</option>
-                        <option value="select">B.E</option>
-                        <option value="select">M.E</option>
-                        <option value="select">PHD</option>
-                    </select>
-                    <input type="radio" name="clg">pursuing
-                    <input type="radio" name="clg">completed
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <Label for="cpi">Avarage cpi</Label>
-                </td>
-                <td>
-                    <input type="text" name="cpi">
-                    <label for="sem">Upto</label>
-                    <input type="text" name="sem">TH Semester
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <label for="Experience">Experience :</label>
-                </td>
-                <td>
-                    <input type="text" name="Experience">Year
-                </td>
-            </tr>
-            <tr>
-                <td style="text-align:right">
-                    <label for="web">Your Website Or Blog :</label>
-                </td>
-                <td>
-                    <input type="text" name="web" placeholder="https://www.google.com">
-                </td>
-            </tr>
-        </table>
-    </fieldset>
+</style>
+<body>
+    <nav>
+        <ul>
+            <li><img src="1.jpg" alt=""></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Gallary</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contack</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Login/signup</a></li>
+        </ul>
+    </nav>
 </body>
-
 </html>
