--- a/task/t/practice-1/task-3.html
+++ b/task/t/practice-1/task-3.html
@@ -17,12 +17,12 @@
     <!-- #f9506f -->
     <nav id="nav">
         <ul class="list">
-            <ul class="sub-list">
+            <ul class="sub-list1">
                 <li>
                     <h1>Passion<span>Kraft</span></h1>
                 </li>
             </ul>
-            <ul class="sub-list">
+            <ul class="sub-list2">
                 <li>
                     <a href="#">Home</a>
                 </li>
@@ -39,15 +39,18 @@
                     <a href="#">Page</a>
                 </li>
             </ul>
-            <ul class="sub-list">
-                <li>
+            <ul class="sub-list3">
+                <li class="hid">
                     <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
                 </li>
-                <li>
+                <li class="hid">
                     <button class="nav-b">Get in Touch</button>
                 </li>
-                <li>
+                <li class="hid">
                     <i class="fa-regular fa-moon"></i>
+                </li>
+                <li class="hid1">
+                    <i class="fa-solid fa-bars"></i>
                 </li>
             </ul>
         </ul>
